--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
+
+/*Import required for some components of Angular Material*/
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
