--- a/src/app/components/form-register/form-register.component.html
+++ b/src/app/components/form-register/form-register.component.html
@@ -1,28 +1,30 @@
 <mat-card class="Center">
   <mat-card-header>
-    <mat-card-title>Register</mat-card-title>
+    <mat-card-title><h2>Register</h2></mat-card-title>
   </mat-card-header>
   <mat-card-content>
     <div class="example-container">
-      <mat-form-field>
-        <input matInput placeholder="Name">
-      </mat-form-field>
-      <mat-form-field>
-        <input matInput placeholder="Email">
-      </mat-form-field>
-      <mat-form-field>
-        <input matInput placeholder="Senha" type="password">
-      </mat-form-field>
-      <mat-form-field>
-        <mat-select placeholder="User Type">
-          <mat-option value="option">User</mat-option>
-          <mat-option value="option">Admin</mat-option>
-        </mat-select>
-      </mat-form-field>
+      <form (ngSubmit)="register(user)">
+        <mat-form-field>
+          <input matInput type="text" placeholder="Name" [(ngModel)]="user.name" #name="ngModel" name="name">
+        </mat-form-field>
+        <mat-form-field>
+          <input matInput placeholder="Email" [(ngModel)]="user.email" #email="ngModel" name="email">
+        </mat-form-field>
+        <mat-form-field>
+          <input matInput placeholder="Password" type="password" [(ngModel)]="user.password" #password="ngModel" name="password">
+        </mat-form-field>
+        <mat-form-field>
+          <mat-select placeholder="User Type" [(ngModel)]="user.userType" #userType="ngModel" name="userType">
+            <mat-option value="Admin">Admin</mat-option>
+            <mat-option value="User">User</mat-option>
+          </mat-select>
+        </mat-form-field>
+        <mat-card-actions>
+          <button mat-button routerLink="/users">return</button>
+          <button mat-button type="submit">Register</button>
+        </mat-card-actions>
+      </form>
     </div>
   </mat-card-content>
-  <mat-card-actions>
-    <button mat-button routerLink="/login">Voltar</button>
-    <button mat-button>Registrar-se</button>
-  </mat-card-actions>
 </mat-card>
